# marsrover-hs

./: README.md  marsrover.cabal
app/: Main.hs
src/: App.hs  MarsRover.hs  Parser.hs
test/: AppSpec.hs  MarsRoverSpec.hs
