name:                marsrover
version:             0.1.0.0
-- synopsis:
-- description:
author:              Benigno Villa Fernández
maintainer:          @BeniVF
copyright:           2020 Benigno Villa Fernández
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     App, MarsRover
  other-modules:       Parser
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable marsrover
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , marsrover
  default-language:    Haskell2010

test-suite marsrover-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , marsrover
                     , hspec
                     , QuickCheck
  other-modules:       AppSpec, MarsRoverSpec
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
